--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -6,19 +6,15 @@ description: "UE4，角色控制，第三人称"
 tag: UE4
 ---   
 
-## 资料导入：
+## 第三人称     
+
+### 导入资源（必须）         
+
 创建相关文件夹，并导入角色相关素材：
-　　　角色模型，含骨骼。
-　　　角色贴图，创建材质，将角色材质赋予角色模型。
-　　　角色动作。
+01.角色模型，含骨骼。
+02.角色贴图，创建材质，将角色材质赋予角色模型。
+03.角色动作。
 
-
-## 配置环境     
-
-### 安装Node（必须）         
-
-作用：用来生成静态页面的
-到Node.js[官网](https://nodejs.org/)下载相应平台的最新版本，一路安装即可。
 
 ### 安装Git（必须）     
 作用：把本地的hexo内容提交到github上去.
