--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -11,11 +11,12 @@ tag: UE4
 ### 导入资源（必须）         
 
 创建相关文件夹，并导入角色相关素材：
-01.角色模型，含骨骼。
 
-02.角色贴图，创建材质，将角色材质赋予角色模型。
+角色模型，含骨骼。
 
-03.角色动作。
+角色贴图，创建材质，将角色材质赋予角色模型。
+
+角色动作。
 
 
 
