--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -4,20 +4,16 @@ title: "角色控制"
 date: 2017-10-20
 description: "UE4，角色控制，第三人称"
 tag: UE4
----   
-
-## 第三人称     
-
-### 导入资源（必须）         
+---       
+### 导入资源        
 
 创建相关文件夹，并导入角色相关素材：
 
-角色模型，含骨骼。
+1.角色模型，含骨骼。
 
-角色贴图，创建材质，将角色材质赋予角色模型。
+2.角色贴图，创建材质，将角色材质赋予角色模型。
 
-角色动作。
-
+3.角色动作。
 
 
 ### 安装Git（必须）     
