--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -14,7 +14,7 @@ tag: UE4
 2.角色贴图，创建材质，将角色材质赋予角色模型。
 
 3.角色动作。
-
+![](/images/Pic/10.20/10.20_1.jpg)
 
 ### 安装Git（必须）     
 作用：把本地的hexo内容提交到github上去.
