--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -14,13 +14,14 @@ tag: UE4
 2.角色贴图，创建材质，将角色材质赋予角色模型。
 
 3.角色动作。
-[](/images/Pic/10.20/10.20_1.jpg)
 
-### 安装Git（必须）     
-作用：把本地的hexo内容提交到github上去.
-安装Xcode就自带有Git，我就不多说了。
+### 按键设置
 
-### 申请GitHub（必须）
+点击edit中的project seting,选择input模块，添加指令.
+
+Jump（跳跃）  Forword （前后移动）  Side （左右移动）  Lookup （视角垂直移动）  Trun（视角水平移动）
+
+### 创建Character
 作用：是用来做博客的远程创库、域名、服务器之类的，怎么与本地hexo建立连接等下讲。
 [github](https://github.com/)账号我也不再啰嗦了,没有的话直接申请就行了，跟一般的注册账号差不多，SSH Keys，看你自己了，可以不配制，不配置的话以后每次对自己的博客有改动提交的时候就要手动输入账号密码，配置了就不需要了，怎么配置我就不多说了，网上有很多教程。
 
