--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -20,6 +20,7 @@ tag: UE4
 点击edit中的project seting,选择input模块，添加指令.
 
 Jump（跳跃）  Forword （前后移动）  Side （左右移动）  Lookup （视角垂直移动）  Trun（视角水平移动）
+![](/images/Pic/10.20/10.20_1.png)
 
 ### 创建Character
 作用：是用来做博客的远程创库、域名、服务器之类的，怎么与本地hexo建立连接等下讲。
