--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -19,7 +19,8 @@ tag: UE4
 
 点击edit中的project seting,选择input模块，添加指令.
 
-Jump（跳跃）  Forword （前后移动）  Side （左右移动）  Lookup （视角垂直移动）  Trun（视角水平移动）
+Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
+<br />
 ![](/images/Pic/10.20/10.20_1.png)
 
 ### 创建Character
