--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -20,13 +20,11 @@ tag: UE4
 点击edit中的project seting,选择input模块，添加指令.
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
-<br />
-![](/images/Pic/10.20/10.20_1.png)
-
 ### 创建Character
-作用：是用来做博客的远程创库、域名、服务器之类的，怎么与本地hexo建立连接等下讲。
-[github](https://github.com/)账号我也不再啰嗦了,没有的话直接申请就行了，跟一般的注册账号差不多，SSH Keys，看你自己了，可以不配制，不配置的话以后每次对自己的博客有改动提交的时候就要手动输入账号密码，配置了就不需要了，怎么配置我就不多说了，网上有很多教程。
+在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
 
+1.将角色基本模型替换至Ｍesh中的Skeletal Mesh处。并调整角色模型比例大小及初始方向。
+2.添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 ### 正式安装HEXO　
 Node和Git都安装好后，可执行如下命令安装hexo：
 
