--- a/_posts/2015-08-25-HEXO搭建个人博客.md
+++ b/_posts/2015-08-25-HEXO搭建个人博客.md
@@ -21,20 +21,19 @@ tag: UE4
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
 ### 创建蓝图
-在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
+1.在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-1.将角色基本模型替换至Ｍesh中的Skeletal Mesh处。并调整角色模型比例大小及初始方向。
+2.创建Play Controller，并命名为BP_Control_Hero。
 
-2.添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+3.创建Game Mode Base，并命名为BP_Mode_Hero，打开界面，将BP_Hero和BP_Control_Her添加其中。
 
-创建Play Controller，并命名为BP_Control_Hero。
+4.在世界设置中，将Gamemode Override改为BP_Mode_Hero。
 
-创建Game Mode Base，并命名为BP_Mode_Hero，打开界面，将BP_Hero和BP_Control_Her添加其中。
+### 移动功能实现
+在BP_Hero使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
 
-在世界设置中，将Gamemode Override改为BP_Mode_Hero。
+![](/images/Pic/10.20/10.20_1.png)
 
-
-### 创建Play Controller
 
 创建
 
