--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -32,7 +32,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 ### 移动功能实现
 在BP_Hero使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
 
-![](/images/Pic/10.20/10.20_1.png)
+![](/images/Pic/10.20/10.20_1.jpg)
 
 
 创建
