--- a/_posts/2017-10-10-UE4使用规范.md
+++ b/_posts/2017-10-10-UE4使用规范.md
@@ -10,4 +10,6 @@ tag: UE4
 ### 文件夹命名规范  
 Content：Assects(资源)， Maps(场景)
 
-Assects: Blueprints(蓝图) ，Materials（材质），Meshes（模型），Textures（贴图），Audio（声音），Effects（粒子）。    
+Assects: Blueprints(蓝图) ，Materials（材质），Meshes（模型），Textures（贴图），Audio（声音），Effects（粒子）。 Animation(动画)   
+
+ Blueprints：Control(控制蓝图)
