--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -23,19 +23,33 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 ### 创建蓝图
 1.在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-2.创建Play Controller，并命名为BP_Control_Hero。
+2.创建Play Controller，并命名为Control_Hero。
 
-3.创建Game Mode Base，并命名为BP_Mode_Hero，打开界面，将BP_Hero和BP_Control_Her添加其中。
+3.创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
 
-4.在世界设置中，将Gamemode Override改为BP_Mode_Hero。
+4.在世界设置中，将Gamemode Override改为GM_Hero。
 
 ### 移动功能实现
-在BP_Hero使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
+
+位置移动：
+
+在BP_Hero中，使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
 
 ![](/images/Pic/10.20/10.20_1.jpg)
 
+视角移动：
 
-创建
+在Control_Hero中，使用input中添加的视角控制指令，来触发视角移动。详细蓝图如下：
+
+![](/images/Pic/10.20/10.20_2.jpg)
+
+优化修改：
+
+在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
+
+在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
+
+将摄像机旋转至合适视角。
 
 	$ sudo npm install -g hexo
 
