--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -51,8 +51,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 将摄像机旋转至合适视角。
 
-
-### 初始化
+### 动画功能实现
 
 
 转载请注明原地址，潘柏信的博客：[http://leopardpan.github.io](http://leopardpan.github.io) 谢谢！
