--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -45,13 +45,13 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 优化修改：
 
-在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
+1.在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
 
-在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
+2.在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
 
-将摄像机旋转至合适视角。
+3.将摄像机旋转至合适视角。
 
 ### 动画功能实现
 
 
-转载请注明原地址，潘柏信的博客：[http://leopardpan.github.io](http://leopardpan.github.io) 谢谢！
+转载请注明原地址，朱稼萌的博客：[http://www.zhuzjm.me/](http://www.zhuzjm.me/) 谢谢！
