--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -52,6 +52,8 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 3.将摄像机旋转至合适视角。
 
 ### 动画功能实现
+关于UE4详细的动画功能介绍，可参考[UE4动画功能详解](http://www.zhuzjm.me/).本部分只介绍动画功能在角色人称中的应用。
+
 
 
 转载请注明原地址，朱稼萌的博客：[http://www.zhuzjm.me/](http://www.zhuzjm.me/) 谢谢！
