--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -31,19 +31,19 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 ### 移动功能实现
 
-位置移动：
+**位置移动：**
 
 在BP_Hero中，使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
 
 ![](/images/Pic/10.20/10.20_1.jpg)
 
-视角移动：
+**视角移动：**
 
 在Control_Hero中，使用input中添加的视角控制指令，来触发视角移动。详细蓝图如下：
 
 ![](/images/Pic/10.20/10.20_2.jpg)
 
-优化修改：
+**优化修改：**
 
 1.在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
 
@@ -54,6 +54,8 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 ### 动画功能实现
 
 关于UE4详细的动画功能介绍，可参考[UE4动画系统](http://www.zhuzjm.me/2017/10/UE4%E5%8A%A8%E7%94%BB%E5%8A%9F%E8%83%BD%E8%AF%A6%E8%A7%A3//),本部分只介绍关于在角色人称中的动画应用。
+
+
 
 
 
