--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -21,13 +21,15 @@ tag: UE4
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
 ### 创建蓝图
-1.在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+* 在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
 
-2.创建Play Controller，并命名为Control_Hero。
+* 将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-3.创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+* 创建Play Controller，并命名为Control_Hero。
 
-4.在世界设置中，将Gamemode Override改为GM_Hero。
+* 创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+
+* 在世界设置中，将Gamemode Override改为GM_Hero。
 
 ### 移动功能实现
 
@@ -55,7 +57,21 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 关于UE4详细的动画功能介绍，可参考[UE4动画系统](http://www.zhuzjm.me/2017/10/UE4%E5%8A%A8%E7%94%BB%E5%8A%9F%E8%83%BD%E8%AF%A6%E8%A7%A3//),本部分只介绍关于在角色人称中的动画应用。
 
+**Blend Space:**
 
+创建Blend Space类型混合空间动画 BS_Hero_run，修改变量名称为Speed,在对应速度位置分别添加各类型动画,stand——>walk——>Run.
+
+**Animation Blueprint:**
+
+01.站立跑动
+
+创建Animation Blueprint类型动画蓝图ABP_Hero，在Anim Graph界面创建State Machine(状态机)命名为Hero State.
+
+点击进入Hero State，创建状态Run,点击进入状态Run，将BS_Hero_run接入Result,并创建变量Speed(float).
+
+在状态Run中的Event Graph中通过蓝图获取角色速度，并赋予给Speed，详细蓝图如下：
+
+![](/images/Pic/10.20/10.20_3.jpg)
 
 
 
