--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -63,7 +63,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 **Animation Blueprint:**
 
-01.Run
+01.Run效果实现
 
 创建Animation Blueprint类型动画蓝图ABP_Hero，在Anim Graph界面创建State Machine(状态机)命名为Hero State.
 
@@ -73,9 +73,9 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 ![](/images/Pic/10.20/10.20_3.jpg)
 
-2.Jump
+2.Jump效果实现
 
-
+在Hero State中添加跳跃流程，即详细参数如下：
 
 
 
