--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -21,15 +21,15 @@ tag: UE4
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
 ### 创建蓝图
-* 在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
+*在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
 
-* 将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+*将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-* 创建Play Controller，并命名为Control_Hero。
+*创建Play Controller，并命名为Control_Hero。
 
-* 创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+*创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
 
-* 在世界设置中，将Gamemode Override改为GM_Hero。
+*在世界设置中，将Gamemode Override改为GM_Hero。
 
 ### 移动功能实现
 
@@ -69,13 +69,19 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 点击进入Hero State，创建状态Run,点击进入状态Run，将BS_Hero_run接入Result,并创建变量Speed(float).
 
-在状态Run中的Event Graph中通过蓝图获取角色速度，并赋予给Speed，详细蓝图如下：
+在状态ABP_Hero中的Event Graph中通过蓝图获取Speed及Falling，详细蓝图如下：
 
 ![](/images/Pic/10.20/10.20_3.jpg)
 
 2.Jump效果实现
 
 在Hero State中添加跳跃流程，即详细参数如下：
+
+![](/images/Pic/10.20/10.20_4.jpg)
+
+添加各阶段跳跃动画，以Falling和Remaining为触发条件。
+
+在Control_Hero中，对移动操作通过Falling进行控制，使角色在空中时不会进行方向变化。
 
 
 
