--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -3,7 +3,7 @@ layout: post
 title: "角色控制"
 date: 2017-10-20
 description: "UE4，角色控制，第三人称"
-tag: UE4
+tag: Blueprints
 ---       
 ### 导入资源        
 
