--- a/_posts/2017-10-01-UE4动画功能详解.md
+++ b/_posts/2017-10-01-UE4动画功能详解.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "UE4动画功能"
+title: "UE4动画系统"
 date: 2017-10-10
-description: "UE4，动画"
-tag: UE4
+description: "UE4，Animation"
+tag: Animation
 ---  
 ### UE4动画系统
 
