--- a/_posts/2017-10-10-UE4使用规范.md
+++ b/_posts/2017-10-10-UE4使用规范.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "UE4使用规范"
-date: 2017-09-10
+date: 2016-05-07
 description: "UE4，规范"
 tag: UE4 Basics
 ---  
@@ -13,3 +13,8 @@ Content：Assects(资源)， Maps(场景)
 Assects: Blueprints(蓝图) ，Materials（材质），Meshes（模型），Textures（贴图），Audio（声音），Effects（粒子）。 Animation(动画)   
 
 Blueprints：Control(控制蓝图)
+
+
+
+<br>
+转载请注明原地址，朱稼萌的博客：[http://www.zhuzjm.me/](http://www.zhuzjm.me/) 谢谢！
