--- a/_posts/2017-10-10-UE4使用规范.md
+++ b/_posts/2017-10-10-UE4使用规范.md
@@ -3,7 +3,7 @@ layout: post
 title: "UE4使用规范"
 date: 2016-05-07
 description: "UE4，规范"
-tag: UE4 Basics
+tag: UE4basics
 ---  
 ### 关于本规范
 为在使用UE4工作过程中，得到更具效率的分类，归档，协作体验，对进行UE4使用规范进行以下归纳，用于参考。     
