--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -1,27 +1,11 @@
 ---
 layout: post
-title: "CrazyBump简介"
+title: "材质基础"
 date: 2016-07-05
-description: "CrazyBump，贴图处理"
-tag: Plug-in
+description: "材质基础，美术"
+tag: 美术
 ---  
 ### 关于CrazyBump
-[CrazyBump](http://www.crazybump.com/)是一款用于制作法线贴图（Normals）的插件，也可导出置换贴图(Displacement)，AO贴图(Occlusion)，高光贴图(Specularity)，漫反射贴图(Diffuse)，一般用于三维软件渲染或游戏引擎美术需要。
-
-### 界面功能介绍
-CrazyBump界面翻译如下：
-
-![](/images/Pic/CrazyBump简介/CrazyBump简介_1.jpg)
-以上各功能贴图在UE4材质中对应的通道为：
-
-CrazyBump——>UE4
-
-Diffuse——>Base Color
-
-Normals——>Normal
-
-Occlusion——>Roughness
-
 
 
 
