--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -5,13 +5,26 @@ date: 2016-07-05
 description: "材质基础，美术"
 tag: 美术
 ---  
-### 关于CrazyBump
+### 关于材质常用命令
+*Add（加）:表达式接收两个输入，将其相加，然后输出结果。这个加法运算按通道执行，这意味着输入的 R 通道、G 通道和 B 通道等等将分别相加。两个输入必须具有相同数目的通道，除非其中之一是单个常量值。常量可以添加到具有任意数目输入的矢量。
 
 
 
-### 下载地址
 
-[CrazyBump下载](http://pan.baidu.com/s/1skW4iip)
+
+
+
+
+
+### 各通道详解4
+
+
+
+
+
+
+
+
 
 <br>
 转载请注明原地址，朱稼萌的博客：[http://www.zhuzjm.me/](http://www.zhuzjm.me/) 谢谢！
