--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -37,7 +37,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 在BP_Hero中，使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
 
-![](/images/Pic/10.20/10.20_1.jpg)
+![](/images/Pic/角色控制(第三人称)/10.20_1.jpg)
 
 **视角移动：**
 
@@ -71,13 +71,13 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 在状态ABP_Hero中的Event Graph中通过蓝图获取Speed及Falling，详细蓝图如下：
 
-![](/images/Pic/10.20/10.20_3.jpg)
+![](/images/Pic/角色控制(第三人称)/10.20_3.jpg)
 
 2.Jump效果实现
 
 在Hero State中添加跳跃流程，即详细参数如下：
 
-![](/images/Pic/10.20/10.20_4.jpg)
+![](/images/Pic/角色控制(第三人称)/10.20_4.jpg)
 
 添加各阶段跳跃动画，以Falling和Remaining为触发条件。
 
