--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -6,7 +6,8 @@ description: "材质基础，美术"
 tag: 美术
 ---  
 ### 关于材质常用命令
-*Add（加）:表达式接收两个输入，将其相加，然后输出结果。这个加法运算按通道执行，这意味着输入的 R 通道、G 通道和 B 通道等等将分别相加。两个输入必须具有相同数目的通道，除非其中之一是单个常量值。常量可以添加到具有任意数目输入的矢量。
+*Add（加）:
+表达式接收两个输入，将其相加，然后输出结果。这个加法运算按通道执行，这意味着输入的 R 通道、G 通道和 B 通道等等将分别相加。两个输入必须具有相同数目的通道，除非其中之一是单个常量值。常量可以添加到具有任意数目输入的矢量。
 
 
 
