--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -43,7 +43,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 在Control_Hero中，使用input中添加的视角控制指令，来触发视角移动。详细蓝图如下：
 
-![](/images/Pic/10.20/10.20_2.jpg)
+![](/images/Pic/角色控制(第三人称)/10.20_2.jpg)
 
 **优化修改：**
 
