--- a/_posts/2017-10-09-Seamless.md
+++ b/_posts/2017-10-09-Seamless.md
@@ -6,7 +6,5 @@ description: "Seamless，贴图处理"
 tag: Plug-in
 ---  
 ### 关于Seamless
-
-[Seamless](http://www.crazybump.com/)
 Seamless为无缝贴图制作软件，处理非常迅速，可以为节省大量的时间。      
-[Seamless](http://pan.baidu.com/s/1qXOyP7u)
+[下载地址](http://pan.baidu.com/s/1qXOyP7u)
