--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -7,7 +7,18 @@ tag: 美术
 ---  
 ### 关于材质常用命令
 *Add（加）:
-表达式接收两个输入，将其相加，然后输出结果。这个加法运算按通道执行，这意味着输入的 R 通道、G 通道和 B 通道等等将分别相加。两个输入必须具有相同数目的通道，除非其中之一是单个常量值。常量可以添加到具有任意数目输入的矢量。
+
+1.将输入的 R 通道、G 通道和 B 通道等等将分别相加。
+
+2.两个输入参数必须具有相同数目的通道，常量值除外。
+
+用法示例：Add（加）通常用来使颜色变亮/变暗，或者使 UV 纹理坐标偏移。
+
+*AppendVector（追加矢量）:
+
+
+
+
 
 
 
