--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -5,7 +5,7 @@ date: 2016-07-05
 description: "材质基础，美术"
 tag: 美术
 ---  
-### 关于材质常用命令
+### 材质常用计算公式
 *Add（加）:
 
 1.将输入的 R 通道、G 通道和 B 通道等等将分别相加。
@@ -14,11 +14,28 @@ tag: 美术
 
 用法示例：Add（加）通常用来使颜色变亮/变暗，或者使 UV 纹理坐标偏移。
 
+*Subtract（减）:
+
+同Add（加）。
+
+
+Multiply（乘）：
+表达式接收两个输入，将其相乘，然后输出结果。类似于 Photoshop 的多层混合。
+
+用法示例：材质混合/改变颜色
+
+
+Divide（除）：
+
+同Multiply（乘）
+
+OneMinus（一减）：
+
+颜色反相
+
+
+
 *AppendVector（追加矢量）:
-
-
-
-
 
 
 
