--- a/_posts/2017-10-10-材质基础.md
+++ b/_posts/2017-10-10-材质基础.md
@@ -14,35 +14,23 @@ tag: 美术
 
 用法示例：Add（加）通常用来使颜色变亮/变暗，或者使 UV 纹理坐标偏移。
 
-*Subtract（减）:
+**Subtract（减）:**
 
 同Add（加）。
 
 
-Multiply（乘）：
+**Multiply（乘）：**
 表达式接收两个输入，将其相乘，然后输出结果。类似于 Photoshop 的多层混合。
 
 用法示例：材质混合/改变颜色
 
 
-Divide（除）：
+**Divide（除）：**
 
 同Multiply（乘）
 
-OneMinus（一减）：
+**OneMinus（一减）：**
 
 颜色反相
 
-
-
-*AppendVector（追加矢量）:
-
-
-
-
-
-
-
-
-
-### 各通道详解4
+**AppendVector（追加矢量）:**
