--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -6,7 +6,7 @@ description: "材质基础，美术"
 tag: 美术
 ---  
 ### 材质常用计算公式
-*Add（加）:
+**Add**（加）:
 
 1.将输入的 R 通道、G 通道和 B 通道等等将分别相加。
 
@@ -31,6 +31,18 @@ tag: 美术
 
 **OneMinus（一减）：**
 
-颜色反相
+颜色反相。
 
 **AppendVector（追加矢量）:**
+
+添加通道
+
+
+**Min（最小值）**
+
+表达式接收两个输入，然后输出其中的较大者。
+
+
+**Max（最小值)**
+
+表达式接收两个输入，然后输出其中的较小者。
