--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -21,15 +21,15 @@ tag: Blueprints
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
 ### 创建蓝图
-*在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
+1.在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
 
-*将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+2.将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-*创建Play Controller，并命名为Control_Hero。
+3.创建Play Controller，并命名为Control_Hero。
 
-*创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+4.创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
 
-*在世界设置中，将Gamemode Override改为GM_Hero。
+5.在世界设置中，将Gamemode Override改为GM_Hero。
 
 ### 移动功能实现
 
