--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -6,7 +6,7 @@ description: "材质基础，美术"
 tag: 美术
 ---  
 ### 材质常用计算公式
-**Add**（加）:
+**Add（加）:**
 
 1.将输入的 R 通道、G 通道和 B 通道等等将分别相加。
 
@@ -17,7 +17,7 @@ tag: 美术
 
 **Subtract（减）:**
 
-同Add（加）。
+与Add（加）相反。
 
 
 **Multiply（乘）：**
@@ -28,7 +28,7 @@ tag: 美术
 
 **Divide（除）：**
 
-同Multiply（乘）
+与Multiply（乘）相反
 
 
 **OneMinus（一减）：**
@@ -38,7 +38,7 @@ tag: 美术
 
 **AppendVector（追加矢量）:**
 
-添加通道
+用于添加参数通道
 
 
 **Min（最小值）**
@@ -46,6 +46,19 @@ tag: 美术
 表达式接收两个输入，然后输出其中的较大者。
 
 
-**Max（最小值)**
+**Max（最大值)**
 
-表达式接收两个输入，然后输出其中的较小者。
+表达式接收两个输入，然后输出其中的较大者。
+
+
+**Clamp（限制）**
+
+表达式接收值，并将它们约束到由最小值和最大值定义的指定范围。
+
+**Sine（正弦）**
+
+用于振荡效果通过将时间输入（速度）或输出（振幅）倍增，可以轻松地动态控制振荡的速度和振幅。
+
+**LinearInterpolate（线性插值）**
+
+表达式根据用作蒙版的第三个输入值，在两个输入值之间进行混合。
