--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -48,4 +48,4 @@ tag: 美术
 
 表达式根据用作蒙版的第三个输入值，在两个输入值之间进行混合。
 
-[参考网站](http://www.52vr.com/article-625-1.html)
+其他不常用计算公式详见[参考网站](http://www.52vr.com/article-625-1.html)
