--- a/_posts/2017-10-10-LUT快速调色.md
+++ b/_posts/2017-10-10-LUT快速调色.md
@@ -1,21 +1,22 @@
 ---
 layout: post
-title: "利用LUT调色"
+title: "LUT调色"
 date: 2016-07-05
 description: "LUT，美术"
 tag: 美术
 ---  
 ### LUT调色流程
 
-LUT调色流程如下([原网站](http://www.zhuzjm.me/2016/07/%E6%9D%90%E8%B4%A8%E5%B8%B8%E7%94%A8%E8%AE%A1%E7%AE%97%E5%85%AC%E5%BC%8F/))：
+LUT调色流程如下([原网站]((https://docs.unrealengine.com/latest/CHN/Engine/Rendering/PostProcessEffects/ColorGrading/index.html))：
 
 获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
 
 加载中性色的 256x16 LUT到Photoshop中。
 
-您可以使用本页面的RGBTable16x1.png图片，但不要进行复制和粘贴，因为屏幕上显示的图片并不一定代表源图像。
+您可以使用本页面的`RGBTable16x1.png` 图片，但不要进行复制和粘贴，因为屏幕上显示的图片并不一定代表源图像。
 
-[LUT Texture](Examplehttps://docs.unrealengine.com/latest/images/Engine/Rendering/PostProcessEffects/ColorGrading/RGBTable16x1.png)
+[LUT Texture](http://pan.baidu.com/s/1nvDVPgd)
+![](/images/Pic/LUT调色/RGBTable16x1.png)
 
 把LUT插入到具有屏幕截图的Photshop文档中（在LUT文档中选择所有，复制，切换到屏幕截图文档，粘帖)。
 
