--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -21,15 +21,15 @@ tag: Blueprints
 
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
 ### 创建蓝图
-1.在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
+*在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
 
-2.将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+*将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
 
-3.创建Play Controller，并命名为Control_Hero。
+*创建Play Controller，并命名为Control_Hero。
 
-4.创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+*创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
 
-5.在世界设置中，将Gamemode Override改为GM_Hero。
+*在世界设置中，将Gamemode Override改为GM_Hero。
 
 ### 移动功能实现
 
@@ -47,11 +47,11 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 **优化修改：**
 
-1.在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
+*在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
 
-2.在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
+*在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
 
-3.将摄像机旋转至合适视角。
+*将摄像机旋转至合适视角。
 
 ### 动画功能实现
 
@@ -63,7 +63,7 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 **Animation Blueprint:**
 
-01.Run效果实现
+1.Run效果实现
 
 创建Animation Blueprint类型动画蓝图ABP_Hero，在Anim Graph界面创建State Machine(状态机)命名为Hero State.
 
