--- a/_posts/2017-10-10-LUT快速调色.md
+++ b/_posts/2017-10-10-LUT快速调色.md
@@ -9,24 +9,19 @@ tag: 美术
 
 LUT调色流程如下([原网站]((https://docs.unrealengine.com/latest/CHN/Engine/Rendering/PostProcessEffects/ColorGrading/index.html))：
 
-获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
+*获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
 
-加载中性色的 256x16 LUT到Photoshop中。
+*加载LUT[GBTable16x1.png[LUT Texture](http://pan.baidu.com/s/1nvDVPgd) 到Photoshop中。
+[](/images/Pic/LUT调色/RGBTable16x1.png)
 
-您可以使用本页面的`RGBTable16x1.png` 图片，但不要进行复制和粘贴，因为屏幕上显示的图片并不一定代表源图像。
+*应用颜色处理操作。
 
-[LUT Texture](http://pan.baidu.com/s/1nvDVPgd)
-![](/images/Pic/LUT调色/RGBTable16x1.png)
+*选择颜色修改后的`256x16 LUT`，导出为png格式。
 
-把LUT插入到具有屏幕截图的Photshop文档中（在LUT文档中选择所有，复制，切换到屏幕截图文档，粘帖)。
-
-应用颜色处理操作(最好通过添加调整层来实现，否则您需要提前使得所有东西都变平，这会使得稍后的256x16大小的图片裁剪变得更加复杂 )。
-
-选择该256x16 LUT (在图层面板中选择LUT层，菜单:选择/加载 , 确定)。
-
-复制已合并的LUT内容。
-
-在编辑器中导入该贴图，然后定义ColorLookupTable贴图组。
-
+*在编辑器中导入该贴图，然后在`PostProcessVolume`中定义`ColorLookupTable`贴图组。
 
 ### 关于调色补充
+
+*`256x16 LUT`导入编辑器后需要对贴图细节的`Texture group`进行调整，将类型改为`ColorLookupTable`。
+
+*LUT修改支持修改特定的颜色，可对特定颜色进行修改加强。
