--- a/_posts/2017-10-10-LUT快速调色.md
+++ b/_posts/2017-10-10-LUT快速调色.md
@@ -9,19 +9,20 @@ tag: 美术
 
 LUT调色流程如下([原网站]((https://docs.unrealengine.com/latest/CHN/Engine/Rendering/PostProcessEffects/ColorGrading/index.html))：
 
-*获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
+* 获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
 
-*加载LUT[GBTable16x1.png[LUT Texture](http://pan.baidu.com/s/1nvDVPgd) 到Photoshop中。
-[](/images/Pic/LUT调色/RGBTable16x1.png)
+* 加载[LUT调色图](http://pan.baidu.com/s/1nvDVPgd) 到Photoshop中。
 
-*应用颜色处理操作。
+![](/images/Pic/LUT调色/RGBTable16x1.png)
 
-*选择颜色修改后的`256x16 LUT`，导出为png格式。
+* 应用颜色处理操作。
 
-*在编辑器中导入该贴图，然后在`PostProcessVolume`中定义`ColorLookupTable`贴图组。
+* 选择颜色修改后的`LUT调色图`，导出为png格式。
+
+* 在编辑器中导入该贴图，然后在`PostProcessVolume`中定义`ColorLookupTable`贴图组。
 
 ### 关于调色补充
 
-*`256x16 LUT`导入编辑器后需要对贴图细节的`Texture group`进行调整，将类型改为`ColorLookupTable`。
+* LUT调色图导入编辑器后需要对贴图细节的`Texture group`进行调整，将类型改为`ColorLookupTable`。
 
-*LUT修改支持修改特定的颜色，可对特定颜色进行修改加强。
+* LUT修改支持修改特定的颜色，可对特定颜色进行修改加强。
