--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -8,9 +8,7 @@ tag: 美术
 ### 材质常用计算公式
 **Add（加）:**
 ```
-1.将输入的 R 通道、G 通道和 B 通道等等将分别相加。
-
-2.两个输入参数必须具有相同数目的通道，常量值除外。
+将输入的R、G、B通道等分别相加。
 
 用法示例：Add（加）通常用来使颜色变亮/变暗，或者使 UV 纹理坐标偏移。
 ```
@@ -21,6 +19,7 @@ tag: 美术
 **Multiply（乘）：**
 ```
 表达式接收两个输入，将其相乘，然后输出结果。类似于 Photoshop 的多层混合。
+
 用法示例：材质混合/改变颜色
 ```
 **Divide（除）：**
