--- a/_posts/2017-10-10-LUT快速调色.md
+++ b/_posts/2017-10-10-LUT快速调色.md
@@ -7,13 +7,11 @@ tag: 美术
 ---  
 ### LUT调色流程
 
-LUT调色流程如下([原网站]((https://docs.unrealengine.com/latest/CHN/Engine/Rendering/PostProcessEffects/ColorGrading/index.html))：
+LUT调色流程如下：
 
-* 获得您想调整的场景的具有代表性的屏幕截图，把它们放到一个Photoshop文档中。
+* 获得您想调整的场景的屏幕截图，把它放到Photoshop中。
 
 * 加载[LUT调色图](http://pan.baidu.com/s/1nvDVPgd) 到Photoshop中。
-
-![](/images/Pic/LUT调色/RGBTable16x1.png)
 
 * 应用颜色处理操作。
 
@@ -26,3 +24,8 @@ LUT调色流程如下([原网站]((https://docs.unrealengine.com/latest/CHN/Engi
 * LUT调色图导入编辑器后需要对贴图细节的`Texture group`进行调整，将类型改为`ColorLookupTable`。
 
 * LUT修改支持修改特定的颜色，可对特定颜色进行修改加强。
+
+
+
+<br>
+这篇文章是在的[UE4官方使用手册](http://www.52vr.com/article-625-1.html)的基础上做的修改，如果发现有不对的地方欢迎与我联系，我会加以修正。
