--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -60,4 +60,4 @@ tag: 美术
 
 
 <br>
-其他不常用计算公式详见[参考网站](http://www.52vr.com/article-625-1.html)
+这篇文章是在的[UE4官方使用手册](http://www.52vr.com/article-625-1.html)的基础上做的修改，如果发现有不对的地方欢迎与我联系，我会加以修正。
