--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -17,68 +17,73 @@ tag: Blueprints
 
 ### 按键设置
 
-点击edit中的project seting,选择input模块，添加指令.
-
+点击`edit`中的`project seting`,选择`input`模块，添加指令.
+```
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
+```
 ### 创建蓝图
-* 在Controller文件夹下，创建Character角色控制器，并命名为BP_Hero。
+* 在`Controller`文件夹下，创建`Character`角色控制器，并命名为`BP_Hero`。
 
-* 将角色基本模型替换至Ｍesh中的Skeletal Mesh处，并调整角色模型比例大小及初始方向。添加SpringArm组件，并在组件下添加Camera,用于角色视角控制。
+* 将角色基本模型替换至`Ｍesh`中的`Skeletal Mesh`处，并调整角色模型比例大小及初始方向。添加`SpringArm`组件，并在组件下添加`Camera`,用于角色视角控制。
 
-* 创建Play Controller，并命名为Control_Hero。
+* 创建`Play Controller`，并命名为`Control_Hero`。
 
-* 创建Game Mode Base，并命名为GM_Hero，打开界面，将BP_Hero和Control_Hero添加其中。
+* 创建`Game Mode Base`，并命名为`GM_Hero`，打开界面，将`BP_Hero`和`Control_Hero`添加其中。
 
-* 在世界设置中，将Gamemode Override改为GM_Hero。
+* 在世界设置中，将`Gamemode Override`改为`GM_Hero`。
 
 ### 移动功能实现
 
 **位置移动：**
 
-在BP_Hero中，使用input中添加的移动指令，来触发角色移动。详细蓝图如下：
+在`BP_Hero`中，使用`input`中添加的移动指令，来触发角色移动。详细蓝图如下：
 
 ![](/images/Pic/角色控制(第三人称)/10.20_1.jpg)
 
 **视角移动：**
 
-在Control_Hero中，使用input中添加的视角控制指令，来触发视角移动。详细蓝图如下：
+在`Control_Hero`中，使用input中添加的视角控制指令，来触发视角移动。详细蓝图如下：
 
 ![](/images/Pic/角色控制(第三人称)/10.20_2.jpg)
 
 **优化修改：**
 
-* 在BP_Hero中，取消角色本身旋转参数，选择Spring Arm,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
+* 在`BP_Hero`中，取消角色本身旋转参数，选择`Spring Arm`,添加旋转参数。（将鼠标的旋转参数作用于摄像头而不是角色）
 
-* 在Control_Hero中，勾选CharacterMovement中的Orient Rotation to Movement选项，使角色可以自动转向移动方向。
+* 在`Control_Hero`中，勾选`CharacterMovement`中的`Orient Rotation to Movement`选项，使角色可以自动转向移动方向。
 
 * 将摄像机旋转至合适视角。
 
 ### 动画功能实现
 
-关于UE4详细的动画功能介绍，可参考[UE4动画基础](http://www.zhuzjm.me/2017/10/UE4%E5%8A%A8%E7%94%BB%E5%8A%9F%E8%83%BD%E8%AF%A6%E8%A7%A3//),本部分只介绍关于在角色人称中的动画应用。
+关于UE4详细的动画功能介绍，可参考[UE4动画基础](http://www.zhuzjm.me/2017/01/UE4动画基础/),本部分只介绍关于在角色人称中的动画应用。
 
 **Blend Space:**
 
-创建Blend Space类型混合空间动画 BS_Hero_run，修改变量名称为Speed,在对应速度位置分别添加各类型动画,stand——>walk——>Run.
+创建`Blend Space`类型混合空间动画`BS_Hero_run`，修改变量名称为`Speed`,在对应速度位置分别添加各类型动画,`stand——>walk——>Run`.
 
 **Animation Blueprint:**
 
 1.Run效果实现
 
-创建Animation Blueprint类型动画蓝图ABP_Hero，在Anim Graph界面创建State Machine(状态机)命名为Hero State.
+创建`Animation Blueprint`类型动画蓝图`ABP_Hero`，在`Anim Graph`界面创建`State Machine`命名为`Hero State`.
 
-点击进入Hero State，创建状态Run,点击进入状态Run，将BS_Hero_run接入Result,并创建变量Speed(float).
+点击进入`Hero State`，创建状态`Run`并点击进入，将`BS_Hero_run`接入`Result`,并创建变量`Speed(float)``.
 
-在状态ABP_Hero中的Event Graph中通过蓝图获取Speed及Falling，详细蓝图如下：
+在状态`ABP_Hero`中的`Event Graph`中通过蓝图获取`Speed`及`Falling`，详细蓝图如下：
 
 ![](/images/Pic/角色控制(第三人称)/10.20_3.jpg)
 
 2.Jump效果实现
 
-在Hero State中添加跳跃流程，即详细参数如下：
+在`Hero State`中添加跳跃流程，即详细参数如下：
 
 ![](/images/Pic/角色控制(第三人称)/10.20_4.jpg)
 
-添加各阶段跳跃动画，以Falling和Remaining为触发条件。
+添加各阶段跳跃动画，以`Falling`和`Remaining`为触发条件。
 
-在Control_Hero中，对移动操作通过Falling进行控制，使角色在空中时不会进行方向变化。
+在`Control_Hero`中，对移动操作通过`Falling`进行控制，使角色在空中时不会进行方向变化。
+
+
+<br>
+这篇文章为笔记作用，如果发现有不对的地方欢迎与我联系，我会加以修正。
