--- a/_posts/2017-10-20-角色控制(第三人称).md
+++ b/_posts/2017-10-20-角色控制(第三人称).md
@@ -9,18 +9,18 @@ tag: Blueprints
 
 创建相关文件夹，并导入角色相关素材：
 
-1.角色模型，含骨骼。
+* 角色模型，含骨骼。
 
-2.角色贴图，创建材质，将角色材质赋予角色模型。
+* 角色贴图，创建材质，将角色材质赋予角色模型。
 
-3.角色动作。
+* 角色动作。
 
 ### 按键设置
 
 点击`edit`中的`project seting`,选择`input`模块，添加指令.
-```
+
 Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （视角垂直移动）, Trun（视角水平移动）
-```
+
 ### 创建蓝图
 * 在`Controller`文件夹下，创建`Character`角色控制器，并命名为`BP_Hero`。
 
@@ -86,4 +86,4 @@ Jump（跳跃）,Forword （前后移动）, Side （左右移动）, Lookup （
 
 
 <br>
-这篇文章为笔记作用，如果发现有不对的地方欢迎与我联系，我会加以修正。
+这篇文章仅为笔记使用，如果发现有不对的地方欢迎与我联系，我会加以修正。
