--- a/_posts/2017-10-10-材质常用计算公式.md
+++ b/_posts/2017-10-10-材质常用计算公式.md
@@ -2,8 +2,8 @@
 layout: post
 title: "材质常用计算公式"
 date: 2016-07-05
-description: "材质基础，美术"
-tag: 美术
+description: "材质基础"
+tag: Materials
 ---  
 ### 材质常用计算公式
 **Add（加）:**
