--- a/_posts/2017-10-10-材质案例（动态发光）.md
+++ b/_posts/2017-10-10-材质案例（动态发光）.md
@@ -5,10 +5,12 @@ date: 2016-07-05
 description: "材质"
 tag: Materials
 ---  
-### 材质常用计算公式
+### 材质效果
 
+发光线框效果如下：
+![](/images/Pic/材质/动态发光1.gif)
 
-
+### 制作步骤
 
 
 
