--- a/_posts/2017-10-10-材质案例（发光线框）.md
+++ b/_posts/2017-10-10-材质案例（发光线框）.md
@@ -8,7 +8,7 @@ tag: Materials
 ### 材质效果
 
 发光线框效果如下：
-![](/images/Pic/材质/发光线框材质.jpg)
+![](/images/Pic/材质/发光线框/发光线框材质.jpg)
 
 
 ### 制作步骤
@@ -19,7 +19,7 @@ tag: Materials
 
 * 勾选材质细节中的Wireframe选项。
 
-![](/images/Pic/材质/发光线框材质2.jpg)
+![](/images/Pic/材质/发光线框/发光线框材质2.jpg)
 
 
 
