--- a/_posts/2017-10-10-材质案例（动态发光）.md
+++ b/_posts/2017-10-10-材质案例（动态发光）.md
@@ -8,16 +8,20 @@ tag: Materials
 ### 材质效果
 
 **发光线框效果如下：**
+
 ![](/images/Pic/材质/动态发光/动态发光1.gif)
 
-### 制作步骤
 **该效果制作原理为：**
+
+
+
+### 制作步骤
+
+**蓝图具体操作：**
 
 ![](/images/Pic/材质/动态发光/动态发光2.jpg)
 
 * 将底色部分和发光部分进行`Lerp`,其中`Alpha`由时间控制参数连入。
-
-
 
 * 制作完毕后，按照同理制作其他部分，最终效果由`Add`进行组合，并连入`Emissive color`
 
