--- a/_posts/2017-10-10-材质案例（动态发光）.md
+++ b/_posts/2017-10-10-材质案例（动态发光）.md
@@ -11,13 +11,13 @@ tag: Materials
 
 ![](/images/Pic/材质/动态发光/动态发光1.gif)
 
-**该效果制作原理为：**
-
-
-
 ### 制作步骤
 
 **蓝图具体操作：**
+
+* 创建Vector3连入Base Color，作为底色。
+
+* 创建Vector3，通过Multiply，控制发光强度，使用花纹的透明通道和lerp控制发光形状。
 
 ![](/images/Pic/材质/动态发光/动态发光2.jpg)
 
