--- a/_posts/2016-08-07-UE4相关插件合集.md
+++ b/_posts/2016-08-07-UE4相关插件合集.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "CrazyBump"
+title: "UE4相关插件合集"
 date: 2016-08-07
-description: "贴图处理"
+description: "Plug-in"
 tag: Plug-in
 ---  
 ### CrazyBump
