--- a/_posts/2016-07-11-材质案例（火）.md
+++ b/_posts/2016-07-11-材质案例（火）.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "材质常用计算公式"
+title: "材质案例（火）"
 date: 2016-07-11
-description: "材质基础"
+description: "材质"
 tag: Materials
 ---  
 ### 材质常用计算公式
