--- a/_posts/2016-06-15-UE4使用规范.md
+++ b/_posts/2016-06-15-UE4使用规范.md
@@ -13,3 +13,7 @@ tag: UE4basics
 **Assects:**  Blueprints(蓝图) ，Materials（材质），Meshes（模型），Textures（贴图），Audio（声音），Effects（粒子）。 Animation(动画)   
 
 **Blueprints:** Control(控制蓝图)
+
+
+<br>
+这篇文章仅为笔记使用，如果发现有不对的地方欢迎与我联系，我会加以修正。
