--- a/_posts/2016-07-24-材质案例（石头）.md
+++ b/_posts/2016-07-24-材质案例（石头）.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "材质常用计算公式"
-date: 2016-07-11
-description: "材质基础"
+title: "材质案例（石头）"
+date: 2016-07-24
+description: "材质"
 tag: Materials
 ---  
 ### 材质常用计算公式
