--- a/_posts/2016-08-07-UE4相关插件合集.md
+++ b/_posts/2016-08-07-UE4相关插件合集.md
@@ -20,7 +20,17 @@ Seamless为无缝贴图制作软件，处理非常迅速，可以为节省大量
 
 ### Speedtree
 
+Speedtree是一款专门的三维树木建模软件，支撑大片的树木的迅速树立和烘托，而且它本身还带有强壮的树木库,不仅够经过插件将树木导入UE4中使用，也能够为制作需要，制作独一无二的树木。
 
-
+[Speedtree](https://pan.baidu.com/share/init?surl=o84lJlS)
 
 ### 3D-Coat
+
+3D-Coat是专为游戏美工设计的软件,可自动创建UV，一次性绘制法线贴图、置换贴图、颜色贴图、透明贴图、高光贴图。最大材质输出支持4096*4096做到真正的无缝输出.  
+
+[3D-Coat下载](http://pan.baidu.com/s/1nv7k7Vj)
+
+
+
+<br>
+这篇文章仅为笔记使用，如果发现有不对的地方欢迎与我联系，我会加以修正。
