--- a/_posts/2016-07-01-材质常用计算公式.md
+++ b/_posts/2016-07-01-材质常用计算公式.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "材质案例（金属）"
-date: 2016-07-11
-description: "材质"
+title: "材质常用计算公式"
+date: 2016-07-01
+description: "材质基础"
 tag: Materials
 ---  
 ### 材质常用计算公式
