--- a/_posts/2016-07-08-材质案例（金属）.md
+++ b/_posts/2016-07-08-材质案例（金属）.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "材质案例（石头）"
-date: 2016-07-11
+title: "材质案例（金属）"
+date: 2016-07-08
 description: "材质"
 tag: Materials
 ---  
