--- a/_posts/2016-07-10-材质案例（火）.md
+++ b/_posts/2016-07-10-材质案例（火）.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "材材质案例（木板）"
-date: 2016-07-11
+title: "材质案例（火）"
+date: 2016-07-10
 description: "材质"
 tag: Materials
 ---  
