--- a/_posts/2016-09-14-地形系统.md
+++ b/_posts/2016-09-14-地形系统.md
@@ -6,13 +6,6 @@ description: "LUT，美术"
 tag: Art
 ---  
 ### 地形系统
-**参考视频：**
-[大佬教你如何用UE4做出逼真的野外场景]
-(https://www.bilibili.com/video/av14724592/?from=search&seid=11793335328146445704)
-
-
+[大佬教你如何用UE4做出逼真的野外场景](https://www.bilibili.com/video/av14724592/?from=search&seid=11793335328146445704)
 ### 景观制作
-
-**参考视频：**
-[虚幻4+SpeedTree快速场景制作]
-(https://www.bilibili.com/video/av12569712/?from=search&seid=4729785992178477595)
+[虚幻4+SpeedTree快速场景制作](https://www.bilibili.com/video/av12569712/?from=search&seid=4729785992178477595)
