--- a/_posts/2016-06-15-UE4使用规范.md
+++ b/_posts/2016-06-15-UE4使用规范.md
@@ -8,11 +8,13 @@ tag: UE4basics
 ### 关于本规范
 为在使用UE4工作过程中，得到更具效率的分类，归档，协作体验，对进行UE4使用规范进行以下归纳，用于参考。     
 ### 文件夹命名规范  
-**Content:** Assects(资源)， Maps(场景)
+**Content(红色):** Assects(资源)， Maps(场景)
 
-**Assects:**  Blueprints(蓝图) ，Materials（材质），Meshes（模型），Textures（贴图），Audio（声音），Effects（粒子）。 Animation(动画)   
+**Assects:**  Blueprint(蓝图 蓝色) ，Material（材质 绿色），Meshe（模型 青色），Texture（贴图 黄色），Audio（声音），Effects（粒子）， Animation(动画 紫色)  ，Squence (动画编辑器)
 
-**Blueprints:** Control(控制蓝图)
+**Blueprints:** Control(控制蓝图)，Other(其他蓝图)  
+
+![](/images/Pic/材质/发光线框/UE4规范1.jpg)
 
 
 <br>
