--- a/_posts/2016-06-15-UE4使用规范.md
+++ b/_posts/2016-06-15-UE4使用规范.md
@@ -14,7 +14,7 @@ tag: UE4basics
 
 **Blueprints:** Control(控制蓝图)，Other(其他蓝图)  
 
-![](/images/Pic/材质/发光线框/UE4规范1.jpg)
+![](/images/Pic/UE4basics/UE4规范UE4规范1.jpg)
 
 
 <br>
