--- a/_posts/2016-06-15-UE4使用规范.md
+++ b/_posts/2016-06-15-UE4使用规范.md
@@ -15,7 +15,7 @@ tag: UE4basics
 **Blueprints:** Control(控制蓝图)，Other(其他蓝图)  
 
 ![](/images/Pic/UE4basics/UE4规范/UE4规范1.jpg)
-
+![](/images/Pic/Demo/bandicam.mp4)
 
 <br>
 这篇文章仅为笔记使用，如果发现有不对的地方欢迎与我联系，我会加以修正。
